LostandFoundPortal/force-app/main/default/objects/Found_Item__c/Found_Item__c.object-meta.xml
<CustomObject>
    <label>Found Item</label>
    <pluralLabel>Found Items</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Found Item Number</label>
        <displayFormat>FOUND-{0000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>