LostandFoundPortal/force-app/main/default/objects/Found_Item__c/fields/Date_Found__c.field-meta.xml
<CustomField>
    <fullName>Date_Found__c</fullName>
    <label>Date Found</label>
    <description>The date when the item was found.</description>
    <required>true</required>
    <type>Date</type>
</CustomField>