LostandFoundPortal/force-app/main/default/objects/Found_Item__c/fields/Item_Summary_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Summary_Name__c</fullName>
    <label>Item Summary Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>